--- a/src/pages/About.css
+++ b/src/pages/About.css
@@ -38,6 +38,7 @@
   font-size: 1.125rem;
   line-height: 1.75;
   color: var(--color-primary);
+  max-width: 65ch;
 }
 
 @media (min-width: 769px) {
